fix media details position moving user toolbar out of layout positioned media details too low

--- a/src/app/components/shell-ui/media-details.css
+++ b/src/app/components/shell-ui/media-details.css
@@ -5,7 +5,7 @@
     /*width: 100%;*/    
     /*flex: 1;*/
     overflow: hidden;
-    top: 40px;
+    top: 0px;
     left: 0px;
     right: 0px;
     bottom: 0px;
